Correct the CSS width attribute for categories-container
The width attribute for categories-container in the CSS file has been changed to a comment. This correction fixes potential layout issues on the webpage. It ensures that the width of the categories-container will not be forced to 90vw and hence allow better responsiveness.

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -706,7 +706,7 @@ header nav {
 .categories--container {
   padding: 20px;
   background: transparent;
-  width: 90vw;
+  /*width: 90vw;*/
 
   & p {
     margin-top: 10px;
